plang/testing/logs/false-incorrect/79/program79.p.p
qVXS Oux0u wVWW :- nsSG nNQE d01, (e (zbY0Q mkZmJ) xoFV8 xv; x75u p dBC (bCu LCG (YpTuS)) t); utskI m (bmqj kRMxL (LTJMU) (K4N9o) (Sm)) (sF0 (RuA) P); (bL zp (A15)), wdxEX (FdFn); ((iJ RNYAV), ex, m S R5a11 g), k.


pYSQ rEgx R (H3vFA) (gTzjM FL1 (H71o) (iWC (X5) (S) hwWht) TKnB) :- (uzTwF eO3y, (wGt40 (suGm jsV); spj (ou m8 Xh (BE) (M5a)) (QbQ6) (O) (zE (Kqq) fWo PYO)); (j3vn (x (Ed2SK) (x qZ7zu GLuGp (b1Elp zB IwGS) PThEI) YFpSf)); (wj Clw); q wApLe (YDAA)).

jos bOY (Rp) spl (f68 (st2L (u Aq (yJ5 (JKaQ5) (y37 (r P Tpg (NwxL)) (y xSFcM h (O) B) (Bpwn) (hB1 oPZJb KDxI rR)) NBVG EJ) rbBb Sn95S) (Bib) dL) (Y12K) Zf oDW) :- rgZM6 UheI al8H (cPMO segY yimy (hHJJo w bF Y yGo)), a1; l5zR6 (ScYN) (RX4) KadN HM; aacu pvPuL; (v2Hkt v5tc (qz c8o) AcA), dGaa, f3Q, hBn ky5, mGd.


dW (R) :- (k1V (QAwi) y6), l U, xNfOl (MH) (d9V l) mhXf; dNy hg ms J6j16, cv6 (YOZ) t0 (kB2d tlf (w (Ovb) (aw (jks2B) rRl (Okq))) i4 (LL7Dn)) (e5T2 (Y) pk (lpUrJ Y (E) E8i)); lNVMF I5o; peuFk (J) s dnlE ZP, d (HX) (Al3bA) (OO5Vu) (aehnR YWR5 (S)), (iXWF (l4wt1 (RjUr) RwMr j28) O468 P).

jnNpG (hjY9 (x7T (kS OI EzV UUZbO (PEz0))) (eSRQ) Dj9) A vf885.
cWWv :- c8 z ba (F) (qz6).

s3h3 :- kNNV i (f8bNk (u Qy kO2)).

? b1UO nI k5.

